,ake some changes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <button class="primary-btn">Ger Started Free</button>
       </div>
-      <img class="img-ready" src="/wc-big.png" alt="">
+      <img class="img-ready" src="wc-big.png" alt="">
     </section>
     <!-- Touch Section  -->
     <section class="form">
